lib_LTLIBRARIES = libomxcolorconv.la

libomxcolorconv_la_SOURCES = omx_colorconv_component.c  \
                             omx_colorconv_component.h \
                             library_entry_point.c

libomxcolorconv_la_LIBADD  = $(OMXIL_LIBS)
libomxcolorconv_la_LDFLAGS = $(COLORCONV_LIBS)
libomxcolorconv_la_CFLAGS  = $(OMXIL_CFLAGS)

