lib_LTLIBRARIES = libomxaudioeffects.la

libomxaudioeffects_la_SOURCES = omx_audio_effect.c omx_audio_effect.h \
                                omx_audiomixer_component.c omx_audiomixer_component.h \
                                library_entry_point.c

libomxaudioeffects_la_LDFLAGS = -lomxil-bellagio

