check_PROGRAMS = omxvolcontroltest omxaudiomixertest

omxvolcontroltest_SOURCES = omxvolcontroltest.c omxvolcontroltest.h
omxvolcontroltest_LDADD   = -lpthread -lomxil-bellagio

omxaudiomixertest_SOURCES = omxaudiomixertest.c omxaudiomixertest.h
omxaudiomixertest_LDADD   = -lpthread -lomxil-bellagio
