lib_LTLIBRARIES = libomxvideosrc.la

libomxvideosrc_la_SOURCES = omx_videosrc_component.c  \
                            omx_videosrc_component.h \
                            library_entry_point.c

libomxvideosrc_la_LIBADD  = $(OMXIL_LIBS)
libomxvideosrc_la_LDFLAGS = 
libomxvideosrc_la_CFLAGS  = $(OMXIL_CFLAGS)

